BUGFIX: Navigation now works when viewing images BUGFIX: Stars overlapping the image display

--- a/css/core.css
+++ b/css/core.css
@@ -91,7 +91,7 @@ body {
 }
 
 #list li .emblems {
-	z-index: 1;
+	z-index: 0;
 	top: -50px;
 	position: relative;
 	display: block;
